Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/TopTools/TopToolsListIteratorOfListOfShape.h

#ifndef TopTools_ListIteratorOfListOfShape_H
#define TopTools_ListIteratorOfListOfShape_H

#include "../../Export_Import.h"

extern "C" DECL_EXPORT void* TopTools_ListIteratorOfListOfShape_Ctor();
extern "C" DECL_EXPORT void* TopTools_ListIteratorOfListOfShape_Ctor49A1D41A(
	void* L);
extern "C" DECL_EXPORT void TopTools_ListIteratorOfListOfShape_Initialize49A1D41A(
	void* instance,
	void* L);
extern "C" DECL_EXPORT void TopTools_ListIteratorOfListOfShape_Next(void* instance);
extern "C" DECL_EXPORT bool TopTools_ListIteratorOfListOfShape_More(void* instance);
extern "C" DECL_EXPORT void* TopTools_ListIteratorOfListOfShape_Value(void* instance);
extern "C" DECL_EXPORT void TopToolsListIteratorOfListOfShape_Dtor(void* instance);

#endif